[package]
name = "axum-sqlx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
chrono = { version = "0.4.26", features = ["serde"] }
config = "0.13.3"
dotenv = "0.15.0"
serde = { version = "1.0.164", features = ["derive"] }
sqlx = { version = "0.6.3", features = ["postgres", "chrono", "macros", "runtime-tokio-native-tls"] }
tokio = { version = "1.28.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
